--- a/styles.css
+++ b/styles.css
@@ -14,11 +14,24 @@ nav{
 
 nav ul{
     display: flex;
+    align-items: center;
     list-style: none;
     height: 65px;
     background-color: black;
+    color: white;
+}
+
+nav ul li{
+    padding: 0 12px;
 }
 
 .brand img{
-    width: 44px;
+    width: 48px;
+}
+
+.brand{
+    display: flex;
+    align-items: center;
+    font-weight: bolder;
+    font-size: 1.1rem;
 }
